Backport to ranger-2.10: JDK8-compatible OpenSearch Map/List helpers
Replace Map.of/List.of in dest-os and OpenSearchUtil for docker build on
ranger-base JDK8.